# rpged64

./: Cargo.toml  justfile
i18n/en/: rpged64.ftl
resources/: com.galacticpirateradio.rpged64.desktop  com.galacticpirateradio.rpged64.metainfo.xml
src/: app.rs  config.rs  key_binds.rs  main.rs  menu.rs
